--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -5,22 +5,44 @@
 }
 
 .navbar {
-    height: 50px;
+    height: 70px;
     width: 100vw;
     background-color: blue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+
+.logo img {
+    height: 40px;
+    width: 40px;
+    background-color: chartreuse;
+}
+
+.social-media {
+    height: 40px;
+    width: 200px;
+    /* background-color: black; */
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.logo {
-    height: 20px;
-    width: 20px;
-    background-color: chartreuse;
+.github {
+    height: 40px;
+    width: 40px;
+    /* background-color: greenyellow; */
 }
 
-.social-media {
-    height: 20px;
-    width: 20px;
-    background-color: black;
+.linkdin {
+    height: 45px;
+    width: 45px;
+    /* background-color: greenyellow; */
+}
+
+.instagram {
+    height: 45px;
+    width: 45px;
+    /* background-color: greenyellow; */
 }
