--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -6,8 +6,10 @@
 
 .navbar {
     height: 70px;
-    width: 100vw;
-    background-color: blue;
+    width: 100%;
+    /* background-color: blue; */
+    background-color: #8ae9b3;
+    /* background-image: linear-gradient(315deg, #8ae9b3 0%, #c8d6e5 74%); */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,9 +17,10 @@
 }
 
 .logo img {
-    height: 40px;
-    width: 40px;
-    background-color: chartreuse;
+    height: 60px;
+    width: 120px;
+    /* background-color: chartreuse; */
+    border-radius: 10%;
 }
 
 .social-media {
@@ -30,19 +33,19 @@
 }
 
 .github {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     /* background-color: greenyellow; */
 }
 
 .linkdin {
-    height: 45px;
-    width: 45px;
+    height: 38px;
+    width: 38px;
     /* background-color: greenyellow; */
 }
 
 .instagram {
-    height: 45px;
-    width: 45px;
+    height: 40px;
+    width: 40px;
     /* background-color: greenyellow; */
 }
