--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -23,6 +23,13 @@
     border-radius: 10%;
 }
 
+.devloper-icon img {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    display: none;
+}
+
 .social-media {
     height: 40px;
     width: 200px;
@@ -48,4 +55,14 @@
     height: 40px;
     width: 40px;
     /* background-color: greenyellow; */
+}
+
+@media only screen and (Max-width: 400px) {
+    .devloper-icon img {
+        display: flex;
+    }
+
+    .social-media {
+        display: none;
+    }
 }
